# vaulti

./: .envrc  .example_vault_pass.txt  .gitignore  LICENSE  README.md  example_encrypted_data.yaml  flake.nix  pyproject.toml  vaulti
.github/workflows/: autopublish_pypi.yml
example/: example_data.yml
examples/: git_diff_tricks.md  installation_and_basic_usage.md  multiline_variables.md  vault_ids.md
src/vaulti/: __main__.py  vaulti.py
src/vaulti_ansible/: __main__.py  vaulti.py
src/vaulti_oveee92/: vaulti.py
tests/: noxfile.py
