[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaulti_oveee92"
version = "0.1.2"
authors = [
    { name="Ove", email="oveee92@gmail.com" },
]
dependencies = [
    "ruamel.yaml>=0.18.6",
    "ansible>=10.0.1",
]
keywords = ["ansible", "ansible-vault"]
description = "Utility for Ansible Vault inline-encrypted variables"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Framework :: Ansible",
]
license = {text = "MIT"}

[project.scripts]
vaulti = "vaulti_oveee92.vaulti:main"

[project.urls]
Homepage = "https://github.com/oveee92/vaulti"
Repository = "https://github.com/oveee92/vaulti"
Issues = "https://github.com/oveee92/vaulti/issues"
