[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaulti_ansible"
dynamic = [
    "version",
]
authors = [
    { name="Ove", email="oveee92@gmail.com" },
]
## Don't list ansible as a dependency, because pip's upgrade strategy is weird; In ansible we might
## want the execution environments to be on a certain version of ansible-core, and mentioning them
## here in any way will upgrade it to the latest. Just add it to the README for completeness.
dependencies = [
    "ruamel.yaml>=0.16.6", # Won't work before this version due to TaggedScalar changes
#    "ansible>=2.4.0.0", # Won't work for older versions due to pycrypto
]
keywords = ["ansible", "ansible-vault"]
description = "Utility for Ansible Vault inline-encrypted variables"
readme = "README.md"
requires-python = ">=3.8" # __future__ is not not available before python 3.7, and ansible seems to skip 3.7, so we just use 3.8
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Framework :: Ansible",
    "Intended Audience :: System Administrators",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
license = {text = "MIT"}

[tool.hatch.version]
path = "src/vaulti_ansible/__about__.py"

[project.scripts]
vaulti = "vaulti_ansible.vaulti:main"

[project.urls]
Homepage = "https://github.com/oveee92/vaulti"
Repository = "https://github.com/oveee92/vaulti"
Issues = "https://github.com/oveee92/vaulti/issues"
